tests/checker/fail/mixed_worlds_main_and_handler.can
use canon/std/http/Headers
use canon/std/http/Request
use canon/std/http/Response
use canon/std/http/Status

home = (Request) -> Response {
    Response(Headers(), Status(200))
}

main = () -> Unit {
    "ok".print()
}
